css/stylesheet.css
/* ... */
/***************** 

FIM 

*****************/




@media screen and (min-device-width: 320px) and (max-device-width: 568px) {


        /***********************************

        iPhone 5

        ************************************/

.introduction,
.house-cleaning,
.groceries-delivery,
.helpr-free,
.do-laundry,
.home-services,
.app-checkout,
.reclaim-life,
.app-partners,
.early-access {
  padding: 0 5%;
}

.logo {
  float: none;
  margin: 30px auto 0;
  text-align: center;
}

.contact-top {
  display: none;
}

h1 {
  font-size: 1.65em;
}

.tagline {
  max-width: 400px;
  font-size: 1.05em;
  line-height: 1.6;
}

.field-wrap input, 
textarea {
  width: 280px;
  font-size: 0.95em;
}

.field-wrap button {
  margin: 10px auto 0;
  width: 280px;
}

.intro, 
.cleaning,
.groceries,
.helpr,
.laundry,
.services,
.checkout,
.partners,
.reclaim,
.status,
.reorder {
  font-size: 1.45em;
}

.intro {
  margin-top: 55px;
}

.early {
  font-size: 1.1em;
}

.intro-description,
.groceries-description,
.helpr-description,
.services-description,
.reclaim-description,
.status-description,
.reorder-description,
.cleaning-description,
.laundry-description,
.status-description,
.reorder-description,
.reclaim-description,
.partners-description {
  max-width: 520px;
  text-align: center;
  font-size: 1em;
}

.intro-description {
  margin-bottom: 40px;
}

.introduction {
  height: 910px;
}

.house-cleaning {
  height: 575px;
}

.groceries-delivery {
  height: 1020px;
}

.helpr-free {
  height: 400px;
}

.do-laundry {
  height: 975px;
}

.reclaim-life {
  height: 1275px;
}

.app-partners {
  height: 735px;
}

.early-access {
  height: 282px;
}

.helpr-wrap {
  padding-top: 62px;
}

.cleaning-wrap,
.laundry-wrap,
.groceries-wrap,
.services-wrap,
.iphone-group,
.status-wrap,
.reorder-wrap,
.reclaim-wrap,
.iphone-2,
.iphone-3,
.iphone-4,
.status-icon,
.reorder-icon,
.people-icon {
   float: none;
   text-align: center;
}

.laundry-wrap {
  margin: 0 auto;
}

.cleaning-title,
.groceries-title,
.laundry-title,
.services-title {
  padding-top: 30px;
}

.iphone-2 {
  margin-top: 50px;
}

.iphone-3 {
  margin-top: 40px;
}

.iphone-4  {
  margin: 0 auto;
}

.home-services {
  text-align: center;
}

.cleaning-title,
.cleaning,
.groceries-title,
.groceries,
.laundry-title,
.laundry,
.services-title,
.services,
.status {
  text-align: center;
}

.cleaning-title,
.groceries-title,
.laundry-title,
.services-title {
  margin-top: 30px;
}

.main-services-wrap,
.services,
.services-wrap {
  margin: 0 auto;
}

.services-description {
  margin: 10px 0 40px 0;
}

.app-checkout {
  height: 1000px;
}

.checkout {
  margin-top: 90px;
}

.screens {
  max-width: 2200px;
  margin-left: -80px;
}

.reclaim-life {
  margin: 0 auto;
  text-align: center;
}

.status-main {
  height: 310px;
}

.reorder-main,
.reclaim-main {
  height: 325px;
}

.status-ico,
.reorder-ico,
.people {
  margin: 30px auto;
  max-height: 130px;
}

.status-ico {
  max-height: 110px;
}


.status-wrap,
.reorder-wrap,
.reclaim-wrap {
  max-width: 700px;
}

.status-wrap {
  margin-top: 70px;
}

.instacart,
.handy,
.fc,
.taskrabbit,
.cleanly {
  margin: 22px 10px;
}

.partners {
  margin-top: 65px;
}

.partners-description {
  margin-bottom: 30px;
}

.footer-wrap {
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  max-width: 960px;
  margin: 0 auto;
  flex-direction: column
}

.footer-right {
  order: 1;
  margin: 12px 0;
}

.email-contact {
  order: 2;
  margin-bottom: 27px;
}

.mixpanel {
  order: 3;
  margin-bottom: 16px;
}




}



/***************** 

FIM 

*****************/

/*@media screen and (min-device-width: 360px) and (max-device-width: 640px) {


}*/


@media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
  

        /***********************************

        iPhone 6

        ************************************/

.logo {
  font-size: 1.7em;
}
h1 {
  font-size: 1.85em;
}

.tagline {
  max-width: 300px;
  font-size: 1.05em;
  line-height: 1.6;
}

.field-wrap input, 
textarea {
  width: 300px;
  font-size: 0.95em;
}

.field-wrap button {
  margin: 10px auto 0;
  width: 300px;
}


.introduction {
  height: 965px;
}

.house-cleaning {
  height: 620px;
}

.groceries-delivery {
  height: 1110px;
}

.helpr-free {
  height: 370px;
}

.do-laundry {
  height: 1045px;
}

.reclaim-life {
  height: 1225px;
}

.app-partners {
  height: 735px;
}

.early-access {
  height: 280px;
}

.status-main {
  height: 280px;
}

.reorder-main,
.reclaim-main {
  height: 325px;
}

.instacart,
.handy,
.fc,
.taskrabbit,
.cleanly {
  margin: 22px 15px;
}

.mixpanel {
  margin-bottom: 30px;
}

}
/* ... */

